updates sandbox component 'wikinews-importer' to be compatible with latest opennlp-tools release
- adjusts parent project (org.apache.apache) to version 18
- adjusts Java language level to 11
- updates `uimaj` dependencies to version 3.3.1
- modernizes resource handling in `WikinewsConverter`
- corrects some formatting issues
- removes unused imports
- addresses PR reviewer's comment(s)